--- a/Lê_Trung_Hiếu_Buổi_3/float/style.css
+++ b/Lê_Trung_Hiếu_Buổi_3/float/style.css
@@ -25,9 +25,10 @@
 
 .clearfix {
     height: 100%;
-    overflow: auto;
+    /* overflow: auto; */
     margin: 10px;
-    
+    clear: both;
+    padding-top: 10px;
   }
 
   .content-box-two-one-box {
