--- a/Lê_Trung_Hiếu_Buổi_3/flex/style.css
+++ b/Lê_Trung_Hiếu_Buổi_3/flex/style.css
@@ -4,105 +4,150 @@ div {
     font-family: 'Times New Roman', Times, serif;
 }
 
-.row {
-    height: auto;
-    width: auto;
+.row {    
     background: white;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    padding: 1px;
+    height: 100%;
 }
 
 .collum {
-    height: 100px;
-    width: auto;    
-    margin: 2px 0px;
+    height: 100px;       
     flex: 1;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;    
 }
-
 
 .box-one {
     background: red;
-    width: 100px;
-    margin: 0px 1px;
+    flex-grow: 1;
+    margin: 0px 1px;    
     border-radius: 5px;
+    height: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .box-two {
-    width: 200px;
+    flex-grow: 2;
     background: red;
     margin: 0px 1px;
     border-radius: 5px;
+    height: 110px;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
 }
 
 .box-three {
-    width: 300px;
+    flex-grow: 3;
     background: red;
     margin: 0px 1px;
     border-radius: 5px;
+    height: 110px;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
 }
 
 .box-four {
-    width: 400px;
+    flex-grow: 4;
     background: red;
     margin: 0px 1px;
     border-radius: 5px;
+    height: 110px;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
 }
 
 .box-five {
-    width: 500px;
+    flex-grow: 5;
     background: red;
     margin: 0px 1px;
     border-radius: 5px;
+    height: 110px;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
 }
 
 .box-six {
-    width: 600px;
+    flex-grow: 6;
     background: red;
     margin: 0px 1px;
     border-radius: 5px;
+    height: 110px;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
 }
 
 .box-seven {
-    width: 700px;
+    flex-grow: 7;
     background: red;
     margin: 0px 1px;
     border-radius: 5px;
+    height: 110px;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
 }
 
 .box-eight {
-    width: 800px;
+    flex-grow: 8;
     background: red;
     margin: 0px 1px;
     border-radius: 5px;
+    height: 110px;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
 }
 
 .box-nine {
-    width: 900px;
+    flex-grow: 9;
     background: red;
     margin: 0px 1px;
     border-radius: 5px;
+    height: 110px;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
 }
 
 .box-ten {
-    width: 1000px;
+    flex-grow: 10;
     background: red;
     margin: 0px 1px;
     border-radius: 5px;
+    height: 110px;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
 }
 
 .box-eleven {
-    width: 1100px;
+    flex-grow: 11;
     background: red;
     margin: 0px 1px;
     border-radius: 5px;
+    height: 110px;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
 }
 
 .box-twenve {
-    width: 1200px;
+    flex-grow: 12;
     background: red;
     margin: 0px 1px;
     border-radius: 5px;
+    height: 110px;
+    align-items: center;
+    justify-content: flex-end;
+    display: flex;
 }
 
